--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "scripts": {
+    "dev": "webpack --mode=development",
+    "build": "webpack --mode=production",
     "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
+    "html-webpack-plugin": "^4.5.2",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5"
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
   },
   "jest": {
     "preset": "ts-jest",
