--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,27 +2,13 @@
   "compilerOptions": {
     "target": "es5",
     "rootDir": "src",
-    "outDir": "build",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    // "allowJs": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src"
-  ]
+    "noEmit": false
+  }
 }
