--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "scripts": {
-    "dev": "webpack --mode=development",
+    "serve": "lite-server --baseDir='dist'",
+    "dev": "webpack --mode=development --watch",
     "build": "webpack --mode=production",
     "clean": "rm -rf dist",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.28",
+    "copy-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^4.5.2",
     "jest": "^26.6.3",
+    "lite-server": "^2.6.1",
     "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1"
   }
 }
