--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "citefrombib",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "main": "dist/citefrombib.min.js",
   "files": ["dist/citefrombib.min.js"],
   "description": "Creates bibtex-like bibliographies.",
@@ -11,6 +11,7 @@
   "author": "Arthur Lui",
   "license": "MIT",
   "scripts": {
+    "prepare": "npm run build",  // This builds when doing `npm install citefrombib`.
     "serve": "lite-server --baseDir='dist'",
     "dev": "webpack --mode=development --watch",
     "build": "webpack --mode=production",
